[package]
name = "common_sls"
version = "0.1.0"
authors = ["Eduardo Sabino <eduardo@amo.delivery>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde_json = "1.0"
serde = "1.0.118"
mongodb = { version = "1.1.1", features = ["async-std-runtime"], default-features = false }